--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ lang: en-US
 title: ray kooyenga github
 email: gmc5oz4k7@mozmail.com
 description: an area for notes and projects
-baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: # /
+url: # https://rkooyenga.github.io
 author: ray kooyenga
-  name:
-  twitter:
+  name: ray kooyenga
+  twitter: https://x.com/rayktweets
   picture: https://avatars.githubusercontent.com/u/9654073
 twitter_username: rayktweets
 github_username: rkooyenga
