--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ algolia:
   index_name: # YOUR_INDEX_NAME
   search_only_api_key: # YOUR_SEARCH_ONLY_API_KEY
   powered_by: # true (default), false
+google_analytics: # ga4 g tag
 
 # Build settings
 markdown: kramdown
